added story to the labeInput

--- a/src/components/atoms/label-input/label-input.module.scss
+++ b/src/components/atoms/label-input/label-input.module.scss
@@ -5,8 +5,14 @@
   padding: 1rem;
   width: 100%;
   font-size: medium;
+  border-radius: 0;
 
   &::placeholder {
     color: colors.$label-input-text-gray;
+  }
+
+  &:hover,
+  &.is-hovered {
+    border: 1px solid colors.$label-input-border-gray;
   }
 }
