--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,6 +11,8 @@ body {
 .button {
   border-radius: 0;
   font-weight: 800;
+  padding: 15px;
+  height: 51px;
 
   &:hover {
     background-color: none;
@@ -22,4 +24,8 @@ body {
       background-color: colors.$submit-button-green;
     }
   }
+}
+
+h3 {
+  font-weight: 800;
 }
