WIP adjusted components to match the desing

--- a/src/components/atoms/text-box/text-box.module.scss
+++ b/src/components/atoms/text-box/text-box.module.scss
@@ -18,3 +18,11 @@
     border: 1px solid colors.$label-input-border-gray;
   }
 }
+
+.contentConteiner {
+  margin: 0 0 15px;
+}
+
+.counter {
+  margin: 0;
+}
