--- a/src/components/molecules/get-in-touch-form/get-in-touch-form.module.scss
+++ b/src/components/molecules/get-in-touch-form/get-in-touch-form.module.scss
@@ -4,13 +4,13 @@
   background-color: colors.$background-form-gray;
   display: grid;
   padding: 15px;
-  grid-template-rows: repeat(6 1fr);
   row-gap: 10px;
   width: 60%;
 }
 
 .gridItem {
-  height: 100px;
+  height: 119px;
+  margin: 0 0 10px;
 }
 
 .smallInput {
