removed focus from button

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -23,6 +23,10 @@ body {
     &.is-hovered {
       background-color: colors.$submit-button-green;
     }
+
+    &:focus:not(:active) {
+      box-shadow: unset;
+    }
   }
 }
 
