fixed stylelint error and correct button label

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -24,6 +24,10 @@ body {
       background-color: colors.$submit-button-green;
     }
 
+    &:active {
+      background-color: colors.$label-input-border-gray;
+    }
+
     &:focus:not(:active) {
       box-shadow: unset;
     }
