-change px sizing units to rem -set max-width and min-width for the form including widescreen -correct misspelling on .contentConteiner

--- a/src/components/atoms/text-box/text-box.module.scss
+++ b/src/components/atoms/text-box/text-box.module.scss
@@ -1,13 +1,12 @@
 @use "@styles/theme/colors";
 
 .textBox {
-  border: 1px solid colors.$label-input-border-gray;
+  border: 0.063rem solid colors.$label-input-border-gray;
   padding: 1rem;
-  font-size: medium;
   border-radius: 0;
   width: 100%;
   box-sizing: border-box;
-  height: 100px;
+  height: 6.2rem;
 
   &::placeholder {
     color: colors.$label-input-text-gray;
@@ -15,16 +14,12 @@
 
   &:hover,
   &.is-hovered {
-    border: 1px solid colors.$label-input-border-gray;
+    border: 0.063rem solid colors.$label-input-border-gray;
   }
-}
-
-.contentConteiner {
-  margin: 0 0 15px;
 }
 
 .counter {
   margin: 0;
   color: colors.$label-input-border-gray;
-  font-size: small;
+  font-size: 0.76rem;
 }
