--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,8 +11,8 @@ body {
 .button {
   border-radius: 0;
   font-weight: 800;
-  padding: 15px;
-  height: 51px;
+  padding: 0.9rem;
+  height: 3rem;
 
   &:hover {
     background-color: none;
