--- a/src/components/atoms/label-input/label-input.module.scss
+++ b/src/components/atoms/label-input/label-input.module.scss
@@ -1,7 +1,7 @@
 @use "@styles/theme/colors";
 
 .input {
-  border: 1px solid colors.$label-input-border-gray;
+  border: 0.063rem solid colors.$label-input-border-gray;
   padding: 1rem;
   font-size: medium;
   border-radius: 0;
@@ -14,6 +14,6 @@
 
   &:hover,
   &.is-hovered {
-    border: 1px solid colors.$label-input-border-gray;
+    border: 0.063rem solid colors.$label-input-border-gray;
   }
 }
