--- a/src/components/molecules/get-in-touch-form/get-in-touch-form.module.scss
+++ b/src/components/molecules/get-in-touch-form/get-in-touch-form.module.scss
@@ -2,7 +2,7 @@
 @import "bulma/sass/utilities/mixins";
 
 .gridContainer {
-  background-color: colors.$background-form-gray;
+  background-color: colors.$background-form;
   display: grid;
   padding: 0.9rem;
   row-gap: 0.6rem;
