--- a/src/components/atoms/label-input/label-input.module.scss
+++ b/src/components/atoms/label-input/label-input.module.scss
@@ -1,7 +1,7 @@
 @use "@styles/theme/colors";
 
 .input {
-  border: 0.063rem solid colors.$label-input-border-gray;
+  border: colors.$input-border;
   padding: 1rem;
   font-size: medium;
   border-radius: 0;
@@ -9,11 +9,10 @@
   box-sizing: border-box;
 
   &::placeholder {
-    color: colors.$label-input-text-gray;
+    color: colors.$placeholder-text;
   }
 
-  &:hover,
-  &.is-hovered {
-    border: 0.063rem solid colors.$label-input-border-gray;
+  &:focus {
+    border-radius: 3px;
   }
 }
