--- a/src/components/molecules/get-in-touch-form/get-in-touch-form.module.scss
+++ b/src/components/molecules/get-in-touch-form/get-in-touch-form.module.scss
@@ -1,11 +1,11 @@
 @use "@styles/theme/colors";
 @import "bulma/sass/utilities/mixins";
 
-.gridContainer {
+.formContainer {
   background-color: colors.$background-form;
   display: grid;
   padding: 0.9rem;
-  row-gap: 0.6rem;
+  gap: 0.6rem;
   max-width: 50rem;
   min-width: 33rem;
 
@@ -14,7 +14,7 @@
   }
 }
 
-.gridItem {
+.textBox {
   height: 7.4rem;
   margin: 0 0 0.6rem;
 }
