-adjust sizing values to keep consistency -add style to errors -move validation squema outside of the function

--- a/src/components/molecules/get-in-touch-form/get-in-touch-form.module.scss
+++ b/src/components/molecules/get-in-touch-form/get-in-touch-form.module.scss
@@ -27,3 +27,12 @@
     display: flex;
   }
 }
+
+.errors {
+  font-size: 0.75rem;
+  font-weight: 400;
+}
+
+.optionalInput {
+  font-size: 0.75rem;
+}
