-Remove React. -fix the checkbox validation bug -add the contacNumber, location and age validations

--- a/src/styles/theme/_colors.scss
+++ b/src/styles/theme/_colors.scss
@@ -6,3 +6,4 @@ $input-border: 1px solid #79899a;
 $placeholder-text: #425568;
 $input-focus: #52a3ec;
 $counter-text: #79899a;
+$optional-input-message: #79899a;
